force-app/main/default/objects/Knowledge__kav/fields/PMC_SS_EndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_EndDate__c</fullName>
    <formula>IF( ISPICKVAL( PublishStatus , &apos;Online&apos;) , LastPublishedDate +  PMC_SS_NumberOfDisplayDays__c
, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>