force-app/main/default/objects/Knowledge__kav/fields/PMC_SS_NumberOfDisplayDays__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NumberOfDisplayDays__c</fullName>
    <label>Number Of Display Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>