force-app/main/default/objects/Knowledge__kav/fields/PMC_SS_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>