force-app/main/default/objects/Knowledge__kav/fields/PMC_SS_ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ReviewDate__c</fullName>
    <formula>IF( ISPICKVAL(PublishStatus, &apos;Online&apos;) , IF((MONTH( DATEVALUE(LastPublishedDate) )==2 &amp;&amp; DAY( DATEVALUE(LastPublishedDate) ) == 29),DATE(YEAR( DATEVALUE(LastPublishedDate) )+0,MONTH( DATEVALUE(LastPublishedDate) ),28),DATE(YEAR( DATEVALUE(LastPublishedDate) )+0,MONTH( DATEVALUE(LastPublishedDate) ),DAY( DATEVALUE(LastPublishedDate) ))) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>