force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
    <fullName>FAQ</fullName>
    <active>true</active>
    <description>Quick answers to general questions about day-to-day operations.</description>
    <label>FAQ</label>
</RecordType>