force-app/main/default/objects/Knowledge__kav/recordTypes/PMC_SS_TechnicalBulletinNotice.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_TechnicalBulletinNotice</fullName>
    <active>true</active>
    <description>Technical document informing users about important events (e.g. System Issues, Planned down times).</description>
    <label>Technical Bulletin/Notice</label>
</RecordType>