force-app/main/default/objects/Knowledge__kav/recordTypes/PMC_SS_TrainingDocument.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_TrainingDocument</fullName>
    <active>true</active>
    <description>Document to inform users about processes within the Salesforce platform.</description>
    <label>Training Document</label>
</RecordType>