force-app/main/default/objects/Knowledge__kav/recordTypes/PMC_SS_TransitionDocument.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_TransitionDocument</fullName>
    <active>true</active>
    <description>Document to inform team members of ongoing activities prior to a leave of absence.</description>
    <label>Transition Document</label>
</RecordType>