force-app/main/default/objects/Knowledge__kav/recordTypes/PMC_SS_UserGuide.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_UserGuide</fullName>
    <active>false</active>
    <description>This can be used to create and upload User Guides to the Knowledge Management Database so that relevant parties are able to access User Guides when needed</description>
    <label>User Guide</label>
</RecordType>