force-app/main/default/objects/Knowledge__kav/validationRules/PMC_SS_ValidateEndDateForBulletinNotice.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateEndDateForBulletinNotice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),NOT(CONTAINS( $Profile.Name , &apos;Digital Hub&apos; )),
	 RecordType.DeveloperName = $Label.PMC_SS_KnowledgeArticle_BulletinRecordType ,ISNULL( PMC_SS_NumberOfDisplayDays__c ) 
	
)</errorConditionFormula>
    <errorMessage>Please provide number of days bulletin needs to be displayed</errorMessage>
</ValidationRule>