force-app/main/default/objects/Knowledge__kav/validationRules/PMC_SS_ValidateNegativeNoOfDisplayDays.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateNegativeNoOfDisplayDays</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),NOT(CONTAINS( $Profile.Name , &apos;Digital Hub&apos; )),
RecordType.DeveloperName =$Label.PMC_SS_KnowledgeArticle_BulletinRecordType,NOT(ISNULL( PMC_SS_NumberOfDisplayDays__c )),PMC_SS_NumberOfDisplayDays__c&lt;0

)</errorConditionFormula>
    <errorMessage>Please input positive value for &apos;Number Of Display Days&apos;.</errorMessage>
</ValidationRule>