force-app/main/default/objects/Knowledge__kav/listViews/Brasil_Artigos_de_conhecimento.listView-meta.xml
<ListView>
    <fullName>Brasil_Artigos_de_conhecimento</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PMC_SS_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_SS_Region__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <label>Brasil - Artigos de conhecimento</label>
</ListView>