force-app/main/default/objects/Knowledge__kav/listViews/FAQ.listView-meta.xml
<ListView>
    <fullName>FAQ</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.FAQ</value>
    </filters>
    <label>FAQ</label>
</ListView>