force-app/main/default/objects/Knowledge__kav/listViews/NAM_Knowledge_Articles.listView-meta.xml
<ListView>
    <fullName>NAM_Knowledge_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PMC_SS_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PMC_SS_Region__c</field>
        <operation>equals</operation>
        <value>North America</value>
    </filters>
    <label>North America - Knowledge Articles</label>
</ListView>