force-app/main/default/objects/Knowledge__kav/listViews/Technical_Bulletin_Notice.listView-meta.xml
<ListView>
    <fullName>Technical_Bulletin_Notice</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.PMC_SS_TechnicalBulletinNotice</value>
    </filters>
    <label>Technical Bulletin/Notice</label>
</ListView>