force-app/main/default/objects/Knowledge__kav/listViews/Training_Document.listView-meta.xml
<ListView>
    <fullName>Training_Document</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.PMC_SS_TrainingDocument</value>
    </filters>
    <label>Training Document</label>
</ListView>